<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="5dp">

  <!--https://www.flaticon.com/authors/smashicons-->
  <ImageView
    android:id="@+id/close_icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_gravity="right"
    android:layout_margin="2dp"
    android:src="@drawable/cross" />

  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/close_icon"
    android:layout_marginTop="10dp">

    <TableRow
      android:paddingLeft="10dp"
      android:paddingStart="10dp"
      android:paddingTop="5dp">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/network_history_selection"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_marginTop="2dp"
          android:layout_weight="1"
          android:textColor="@color/snooper_black"
          android:drawableTop="@drawable/http_calls"
          android:text="@string/network_history" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/database_reader_selection"
        android:gravity="center"
        android:orientation="vertical">

        <!--https://www.flaticon.com/authors/smashicons-->
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_marginTop="2dp"
          android:layout_weight="1"
          android:textColor="@color/snooper_black"
          android:drawableTop="@drawable/database"
          android:text="@string/database_reader" />

      </LinearLayout>
    </TableRow>
  </TableLayout>

</RelativeLayout>