<resources>
  <string name="snooper_affinity">.snooper_affinity</string>
  <string name="title_activity_http_call_list">Http Calls</string>
  <string name="title_http_call_activity">HTTP Call Detail</string>
  <string name="title_db_reader_activity">Application Databases</string>
  <string name="title_db_view_activity">Database</string>
  <string name="request">REQUEST</string>
  <string name="response">RESPONSE</string>
  <string name="headers">HEADERS</string>
  <string name="error">ERROR</string>
  <string name="copy">Copy</string>
  <string name="done">DONE</string>
  <string name="response_headers">Response Headers</string>
  <string name="request_headers">Request Headers</string>
  <string name="general_info">General</string>
  <string name="header_name_value_separator">" : "</string>
  <string name="progress_wait_message">"Just a Moment&#8230;</string>
  <string name="share">Share</string>
  <string name="mail_subject_share_logs">Log details</string>
  <string name="chooser_title_share_logs">Choose an application to open the log file with:</string>
  <string name="permission_not_granted">This feature requires WRITE_EXTERNAL_STORAGE permission.</string>
  <string name="delete_all_records">Delete all logs</string>
  <string name="search_title">Search</string>
  <string name="search_hint">Search…</string>
  <string name="delete_records_dialog_confirmation">Delete</string>
  <string name="delete_records_dialog_cancellation">No</string>
  <string name="delete_records_dialog_text">Are you sure you want to delete all the records ?</string>
  <string name="accordion_header">accordion_header</string>
  <string name="accordion_body">accordion_body</string>
  <string name="failed">FAILED</string>
  <string name="no_results_found">No results found for \'%s\'</string>
  <string name="no_calls_found">No calls found.</string>
  <string name="request_body_heading">Request Body</string>
  <string name="response_body_heading">Response Body</string>
  <string name="name_name_heading">Name : </string>
  <string name="db_version_heading">Version : </string>
  <string name="db_tables">Tables : </string>
  <string name="title_table_view_activity">Table</string>
  <string name="serial_number_column_heading">S.No.</string>
</resources>
