...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="@string/accordion_body">

        <com.prateekj.snooper.customviews.NonScrollListView
          android:id="@+id/response_header_list"
          android:layout_width="match_parent"
          android:layout_height="0dp"/>
      </LinearLayout>
    </com.prateekj.snooper.customviews.AccordionView>

    <com.prateekj.snooper.customviews.AccordionView
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="@string/accordion_body">

        <com.prateekj.snooper.customviews.NonScrollListView
          android:id="@+id/request_header_list"
          android:layout_width="match_parent"
          android:layout_height="0dp"/>
      </LinearLayout>
    </com.prateekj.snooper.customviews.AccordionView>
  </LinearLayout>
</androidx.core.widget.NestedScrollView>
...
