<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <include
    android:id="@+id/embedded_loader"
    layout="@layout/embedded_loader"
    android:visibility="gone"/>

  <androidx.core.widget.NestedScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prateekj.snooper.networksnooper.activity.HttpCallListActivity">

    <HorizontalScrollView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/payload_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollHorizontally="true"
        android:textColor="@color/snooper_black"
        android:textSize="12sp"/>
    </HorizontalScrollView>
  </androidx.core.widget.NestedScrollView>


</LinearLayout>